--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "chokidar": "^3.5.3",
     "dotenv": "^16.0.3",
     "inquirer": "^9.1.4",
+    "prompt-sync": "^4.2.0",
     "protocoljs": "^0.1.0",
     "ts-node": "^10.9.1"
   },
