--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "scripts": {
     "traverse": "ts-node-esm -P tsconfig.json src/traversal/index.mts",
     "dts": "ts-node-esm -P tsconfig.json src/dtsparser/index.mts",
-    "lex": "ts-node-esm -P tsconfig.json src/lexer/index.mts",
-    "expr": "ts-node-esm -P tsconfig.json src/lexer/expression.mts",
+    "lex": "ts-node-esm -P tsconfig.json src/craftinginterpreters/index.mts",
+    "expr": "ts-node-esm -P tsconfig.json src/craftinginterpreters/expression.mts",
     "start": "ts-node-esm -P tsconfig.json src/index.mts",
     "show-configs": "ts-node-esm --showConfig",
     "test": "jest"
